# vec

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  \  a.out  all.sh  example.c  install-release.sh  release.sh  todo  win-debug.sh  win-release.sh
example/: example.c
examples/: example.c
include/: vec.h
src/: vec.c  vec_private.h  vec_utils.h
test/: test.c  test_utils.h  test_vec.c
test/main/: test.c
